--- a/contest_276/.vscode/settings.json
+++ b/contest_276/.vscode/settings.json
@@ -6,6 +6,7 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "vector": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "iostream": "cpp"
     }
 }
